--- a/css_box_model.html
+++ b/css_box_model.html
@@ -7,7 +7,7 @@
 <style>
 	* {
 		font-size: x-large;
-		margin: 0 !important;
+		margin: 0;
 		padding: 0;
 	}
 
@@ -16,7 +16,7 @@
 		height: 100px;
 		text-align: center;
 		padding: 10px;
-		margin: 5px !important;
+		margin: 5px;
 		color: white;
 		border-style: solid;
 		border-color: red;
